working on responsiveness for team and reviews section, running into some issues with the team cards not being the same size, and in the reviews section the imported images are not responsive

--- a/src/Styles/meet_your_team_styles.scss
+++ b/src/Styles/meet_your_team_styles.scss
@@ -25,6 +25,13 @@
     border-radius: 1em;
 }
 
+.team-member-description-text-container { 
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: stretch;
+}
+
 .team-title-subtitle-container * { 
     font-family: "Poppins", sans-serif;
 }
@@ -58,12 +65,13 @@
 
 .team-profile-container * { 
     font-family: "Poppins", sans-serif;
+    text-align: center;
 }
 
 .team-member-profile-container { 
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: stretch;
     flex-direction: column;
     padding: 2em;
     gap: 1em;
@@ -79,6 +87,11 @@
     // white-space: nowrap;
     // font-size: 0.9rem;
     // line-break: none;
+}
+
+.team-member-img-container { 
+    display: flex;
+    justify-content: center;
 }
 
 .team-member-profile-container img { 
